# HummingbirdEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  swap.cpp
3rd/glfw/include/GLFW/: glfw3.h
3rd/tinygltf/: stb_image.h
artRes/shaders/: pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_khr.frag  pbr_khr.frag.spv  skybox.frag  skybox.frag.spv
base/: CMakeLists.txt  VulkanUtils.hpp  ui.hpp
note/: .$渲染部分架构.drawio.bkp  渲染部分架构.drawio
src/: CMakeLists.txt  main.cpp
src/core/: ApplicationBase.cpp  ApplicationBase.h  BoundingBox.hpp  CMakeLists.txt  DrawObjectsPass.hpp  DrawSkyboxPass.hpp  FPSTimer.hpp  FileUtils.hpp  ForwardRenderer.hpp  Light.hpp  Log.hpp  Material.hpp  Mesh.hpp  RasteriztionRenderPipeline.hpp  RenderBlocks.hpp  RenderPipelineCore.hpp  ScreenSpaceAmbientOcclusion.hpp  ScreenSpaceAmbientOcclusionPass.hpp  ScriptableRenderPass.hpp  ScriptableRenderPipeline.hpp  ScriptableRenderer.hpp  ScriptableRendererFeature.hpp  Transform.hpp  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanUtils.hpp  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp  keycodes.hpp  macros.h  ui.hpp
src/example/: CMakeLists.txt  main.cpp  testMain.cpp
src/scripts/: Core.h  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanUtils.hpp  VulkanglTFModel.cpp  VulkanglTFModel.h  macros.h  main.cpp  mainOld.cpp  ui.hpp
src/shaders/: shader.vert  vert.spv
src/shells/: CompileShader.bat
